// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 61,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.815,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 146,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 49,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 292,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.555,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.0975000000000001,
  "hp": 190,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 17,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.535,
  "critResistPct": 4.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14,
  "healMult": 1.1725,
  "hp": 640,
  "intStat": 148,
  "magicAtk": 37,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 28,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 28,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 2.3749999999999996,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 23,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 118,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.595,
  "critResistPct": 1.5,
  "def": 30,
  "evasionPct": 2.7,
  "extraAttackChancePct": 10,
  "healMult": 1.7175000000000002,
  "hp": 835,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 20,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 46,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.801,
  "critResistPct": 1.5,
  "def": 18,
  "evasionPct": 2.7,
  "extraAttackChancePct": 7,
  "healMult": 1.2575,
  "hp": 720,
  "intStat": 15,
  "magicAtk": 26,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "d1f26432c5f031e564b5cd714e3b6f07e1229707",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "665c05fc00fc06e4cd4c925545c0bb08077b5af8",
    "outcome": "win",
    "playerHp": 714,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "6915d46e4bd6ba3994202951badc253ea2714d62",
    "outcome": "win",
    "playerHp": 544,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "229bc75245791c4a5f5f8ad93ba8d501f61e6785",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e67d2dc7e3edd45d016af919cf294e6ed5d30381",
    "outcome": "win",
    "playerHp": 388,
    "playerMp": 501,
    "turns": 55,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "4503e77086156fb4b6d13891b95ec5dbc1f5fb49",
    "outcome": "win",
    "playerHp": 281,
    "playerMp": 227,
    "turns": 539,
  },
  {
    "enemyHp": 220,
    "label": "heal_vs_들소_boss",
    "logSha": "9a9f357a5e9756aa3995cb82d225cecf93685ee7",
    "outcome": "lose",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 251,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "da32dfd937189ea17579a4cfaa20edf87518bd43",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "b6cac6e1f9f83776407d1c644b89067ed3dd53cb",
    "outcome": "win",
    "playerHp": 185,
    "playerMp": 92,
    "turns": 26,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "9397753c9758a00efc72a0b7904eab2f78396f09",
    "outcome": "p1_win",
    "turns": 71,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "b3ec11399829326c4251e1a32b53d7f130abb159",
    "outcome": "p1_win",
    "turns": 41,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "06a6f872256ce764ddb5b5d757c67531d60057d9",
    "outcome": "p2_win",
    "turns": 204,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "534ccaa1345618519c2e28b06dda49b58542d861",
    "outcome": "win",
    "playerHp": 714,
    "playerMp": 227,
    "turns": 21,
  },
  {
    "enemyHp": 108,
    "label": "chill_enemy",
    "logSha": "825a977869e7ded44e0ccd89e22794fb5865b494",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 68,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "5e4a9cfb64b0585d84b73cbc2b32dfeae923c647",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 146,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "f1e6effba111f187956464119148e0a58094322d",
    "outcome": "win",
    "playerHp": 508,
    "playerMp": 227,
    "turns": 54,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "6fd89d739403ec63034910c0fe7815111f65f152",
    "outcome": "win",
    "playerHp": 706,
    "playerMp": 227,
    "turns": 24,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "aeae3bd11d168c65d45b643ed72bafb5f74555f7",
    "outcome": "win",
    "playerHp": 712,
    "playerMp": 227,
    "turns": 23,
  },
  {
    "enemyHp": 29,
    "label": "heavyblow_enemy",
    "logSha": "055b80f445092889facea0bf474363ff7a80d038",
    "outcome": "lose",
    "playerHp": 0,
    "playerMp": 227,
    "turns": 603,
  },
]
`;
